--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,12 @@
 gym:
   patch_size: [128, 128]
-  resize_thumbnail: [768, 768]
+  resize_thumbnail: [512, 512]
   max_episode_steps: 1000
 
 train:
-  batch_size: 32
+  batch_size: 5
   lr: 0.001
-  memory_size: 2_500
+  memory_size: 5
   gamma: 0.9
   eps_start: 1
   eps_end: 0.01
